<resources>
    <string name="app_name">Mental+</string>
    <string name="profile_name">Alexandre Rodrigues</string>
    <string name="btn_buscar">Botão de pesquisa</string>
    <string name="profile_image">Foto de perfil</string>
    <string name="postar">Postar</string>
    <string name="btn_postarIMG">Botão de adicionar imagem</string>
    <string name="image_send">Foto escolhida</string>
    <string name="lbl_legenda">Legenda:</string>
    <string name="textTema">Tema</string>
    <string name="search">Search</string>
    <string name="config">Configuração</string>
    <string name="foto">postagemFoto</string>
    <string name="btnvoltar">btnVoltar</string>
    <string name="DataPost">Postado em:</string>


    <!-- Start Fragment -->
    <string name="start_action_bar_title">Inicio</string>
    <string name="btnPostagem">Botão postagem</string>

    <!-- Post Fragment -->
    <string name="post_action_bar_title">Publicar</string>
    <string name="linkImg">Link imagem:</string>

    <!-- Profile Fragment -->
    <string name="profile_action_bar_title">Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descProfile">Breve apresentação</string>
    <string name="idade">Idade:</string>
    <string name="idadeTest">19</string>
    <string name="genero">Gênero:</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


</resources>