<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/listFragment">

    <fragment
        android:id="@+id/formFragment"
        android:name="com.junior.testepi.FormFragment"
        android:label="@string/post_action_bar_title"
        tools:layout="@layout/fragment_form">
        <action
            android:id="@+id/action_formFragment_to_listFragment"
            app:destination="@id/listFragment"
            app:popUpTo="@id/listFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/listFragment"
        android:name="com.junior.testepi.ListFragment"
        android:label="@string/start_action_bar_title"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_listFragment_to_formFragment"
            app:destination="@id/formFragment" />
        <action
            android:id="@+id/action_listFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.junior.testepi.ProfileFragment"
        android:label="@string/profile_action_bar_title"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_listFragment"
            app:destination="@id/listFragment"
            app:popUpTo="@id/listFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.junior.testepi.LoginFragment"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_listFragment"
            app:destination="@id/listFragment" />
        <action
            android:id="@+id/action_loginFragment_to_cadFragment"
            app:destination="@id/cadFragment" />
    </fragment>
    <fragment
        android:id="@+id/cadFragment"
        android:name="com.junior.testepi.CadFragment"
        tools:layout="@layout/fragment_cad">
        <action
            android:id="@+id/action_cadFragment_to_listFragment"
            app:destination="@id/listFragment" />
        <action
            android:id="@+id/action_cadFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
</navigation>