<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:visibility="visible"
    app:cardBackgroundColor="#E9F4F6"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".PostagemActivity">


        <View
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="500dp"
            android:background="#A3C8F3"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:helperText="Link da imagem é requerido."
            app:helperTextTextColor="#6A1B9A"
            app:layout_constraintEnd_toEndOf="@+id/view3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/view3"
            app:layout_constraintTop_toBottomOf="@+id/view3">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textLegenda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/lbl_legenda"
                android:inputType="textPersonName"
                android:textColorHint="#616161"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,TextContrastCheck" />


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonPostar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/postar"
            android:textColor="#EDE7F6"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/view3"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:background="@null"
            android:contentDescription="@string/btn_postarIMG"
            app:layout_constraintBottom_toBottomOf="@+id/buttonPostar"
            app:layout_constraintEnd_toStartOf="@+id/buttonPostar"
            app:layout_constraintTop_toTopOf="@+id/buttonPostar"
            app:srcCompat="@android:drawable/ic_menu_gallery"
            tools:ignore="SpeakableTextPresentCheck" />

        <Spinner
            android:id="@+id/spinnerTema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:entries="@array/tema"
            android:minHeight="48dp"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/view3"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
            app:layout_constraintVertical_bias="0.44" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:visibility="visible"
            app:endIconMode="clear_text"
            app:helperText="Link da imagem é requerido."
            app:helperTextTextColor="#6A1B9A"
            app:layout_constraintEnd_toEndOf="@+id/view3"
            app:layout_constraintStart_toStartOf="@+id/view3"
            app:layout_constraintTop_toTopOf="@+id/view3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/imgLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/linkImg"
                android:textAllCaps="false"
                android:textColorHint="#616161"

                tools:ignore="TextContrastCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>